# minkipc

./: CMakeLists.txt
libminkadaptor/: CMakeLists.txt
libminkadaptor/src/: supplicant.c  syscall.S  syscall32.S
libminkadaptor/tests/smcinvoke_client/: CMakeLists.txt
libminkteec/: CMakeLists.txt
libminkteec/tests/gp_test_client/: CMakeLists.txt
listeners/libfsservice/cmn/: helper.c
listeners/libfsservice/fs/: CMakeLists.txt  fs.c
listeners/libfsservice/gpfs/: CMakeLists.txt  gpfs.c
listeners/libtaautoload/: CMakeLists.txt
listeners/libtaautoload/src/: dmaMemPool.cpp
listeners/listenercbo/: CMakeLists.txt
qtee_supplicant/: CMakeLists.txt  qteesupplicant.service.in
qtee_supplicant/src/: listener_mngr.c
